--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "php": "^8.4"
   },
   "require-dev": {
-    "orchestra/testbench": "^10.6",
+    "larastan/larastan": "^3.7",
     "laravel/pint": "^1.25",
+    "orchestra/testbench": "^10.6",
     "pestphp/pest": "^4.1",
-    "rector/rector": "^2.1",
-    "larastan/larastan": "^3.7"
+    "pestphp/pest-plugin-type-coverage": "^4.0",
+    "rector/rector": "^2.1"
   },
   "license": "MIT",
   "autoload": {
