--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
   "name": "zmyslny/laravel-inline-scripts",
-  "description": "Provides a simple way to wrap you JavaScript code, stored in a file or files, and inline it in HTML as a custom blade directive.",
+  "description": "Provides an easy way to wrap your JavaScript code, stored in a file or files, and inline it in HTML as a custom blade directive.",
   "type": "package",
   "require": {
-    "php": "^8.3"
+    "php": "^8.3",
+    "laravel/framework": "^12.0"
   },
   "require-dev": {
     "larastan/larastan": "^3.7",
