--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "zmyslny/laravel-inline-scripts",
-  "description": "Provides an easy way to wrap your JavaScript code, stored in a file or files, and inline it in HTML as a custom blade directive.",
+  "description": "Provides an easy way to convert your JavaScript code, stored in a file or files, into a custom blade directive and inline it in HTML.",
   "type": "package",
   "require": {
     "php": "^8.3",
@@ -55,6 +55,16 @@
     "sort-packages": true,
     "allow-plugins": {
       "pestphp/pest-plugin": true
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Zmyslny\\LaravelInlineScripts\\BladeInlineScriptsProvider"
+      ],
+      "aliases": {
+        "BladeInlineScripts": "Zmyslny\\LaravelInlineScripts\\BladeInlineScriptsFacade"
+      }
     }
   }
 }
