--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,16 @@
   "license": "MIT",
   "type": "package",
   "require": {
-    "php": "^8.3",
-    "laravel/framework": "^12.0"
+    "php": "^8.2",
+    "laravel/framework": "^10.0|^11.0|^12.0"
   },
   "require-dev": {
     "larastan/larastan": "^3.7",
     "laravel/pint": "^1.25",
     "laravel/sail": "^1.46",
     "orchestra/testbench": "^10.6",
-    "pestphp/pest": "^4.1",
-    "pestphp/pest-plugin-type-coverage": "^4.0",
+    "pestphp/pest": "^3.8",
+    "pestphp/pest-plugin-type-coverage": "^3.6",
     "rector/rector": "^2.1"
   },
   "autoload": {
