--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
   "name": "zmyslny/laravel-inline-scripts",
-  "description": "Provides an easy way to convert your JavaScript code, stored in a file or files, into a custom blade directive and inline it in HTML.",
+  "description": "Converts your JavaScript code, stored in a file or files, into a custom blade directive and inline it in HTML.",
   "license": "MIT",
   "type": "package",
   "require": {
     "php": "^8.2",
-    "laravel/framework": "^10.0|^11.0|^12.0"
+    "laravel/framework": "^9.0|^10.0|^11.0|^12.0"
   },
   "require-dev": {
     "larastan/larastan": "^3.7",
