--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,4 +21,4 @@ jobs:
             run: composer install --prefer-dist --no-progress
 
         -   name: Unit Tests
-            run: composer test:unit
+            run: composer test:unit:co
