--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,8 +17,17 @@ jobs:
                 php-version: '8.2'
                 tools: composer:v2
 
-        -   name: Install dependencies
+        -   name: Setup Node.js
+            uses: actions/setup-node@v4
+            with:
+                node-version: '20'
+                cache: 'npm'
+
+        -   name: Install PHP dependencies
             run: composer install --prefer-dist --no-progress
+
+        -   name: Install npm dependencies
+            run: npm ci
 
         -   name: Unit tests with coverage
             run: composer test:unit:co
@@ -31,3 +40,9 @@ jobs:
 
         -   name: Test PHP formating
             run: composer test:format:php
+
+        -   name: JavaScript tests
+            run: composer test:js
+
+        -   name: Tests JS formating
+            run: composer test:format:js
