--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,3 +46,6 @@ jobs:
 
         -   name: Tests JS formating
             run: composer test:format:js
+
+        -   name: Tests JS linting
+            run: composer test:lint
