chore: composer update

--- a/composer.json
+++ b/composer.json
@@ -54,8 +54,7 @@
   },
   "authors": [
     {
-      "name": "Ostrowski Maciej",
-      "email": "zmyslny@icloud.com"
+      "name": "Ostrowski Maciej"
     }
   ],
   "minimum-stability": "stable",
